test/conformance/chainsaw/policy-validation/cluster-policy/cel-preconditions/validate-policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: test-validate
spec:
  rules:
    - name: check-app-label
      match:
        any:
          - resources:
              kinds:
                - Pod
      celPreconditions:
        - name: require-app-nginx
          expression: object.metadata.labels.app == 'nginx'
      validate:
        message: "Pods must have an 'app' label."
        pattern:
          metadata:
            labels:
              app: "?*"
