test/conformance/chainsaw/policy-validation/cluster-policy/cel-preconditions/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: test-cel-preconditions
spec:
  concurrent: true
  steps:
    - name: apply mutate
      try:
        - script:
            content: kubectl apply -f mutate-policy.yaml
            check:
              (contains($stderr, 'celPrecondition can only be used with validate.cel')): true
    - name: apply generate
      try:
        - script:
            content: kubectl apply -f generate-policy.yaml
            check:
              (contains($stderr, 'celPrecondition can only be used with validate.cel')): true
    - name: apply validate
      try:
        - script:
            content: kubectl apply -f validate-policy.yaml
            check:
              (contains($stderr, 'celPrecondition can only be used with validate.cel')): true
